--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,4 +1,4 @@
-<footer th:fragment="footer" class="pt-4 my-md-5 pt-md-5 border-top footer fixed-bottom">
+<footer th:fragment="footer" class="pt-4 my-md-5 pt-md-5 border-top footer">
     <div class="row col-8 offset-2">
         <div class="col-12 col-md">
             Eugen-Mihai Craciun
