--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,145 +6,8 @@
         <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
             <h1 class="display-4">KBN Project</h1>
             <p class="lead">
-                Develop a kanban-like platform for self usage
+                A free self-hosted kanban board.
             </p>
-        </div>
-        <div class="container col-md-10 text-center mr-auto d-flex justify-content-center">
-            <div class="row col-md-12">
-                <div class="column col-md-5ths p-1">
-                    <div class="bg-gray rounded fill-height">
-                        <div class="p-3">
-                            <span>To Do</span>
-                        </div>
-                        <div draggable="true" class="card mb-2 box-shadow m-1 cursor-pointer">
-                            <div class="card-body">
-                                <span>Implement the flags functionalities</span>
-                                <div>
-                                    <div class="float-left d-flex">
-                                        <span th:insert="fragments/flags :: feature"></span>
-                                        <span th:insert="fragments/flags :: priority(${'HIGH_PRIORITY'})"></span>
-                                    </div>
-                                    <div class="float-right">
-                                        <span th:insert="fragments/flags :: story_points(${2})"></span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div draggable="true" class="card mb-2 box-shadow m-1 cursor-pointer">
-                            <div class="card-body">
-                                <span>Fix the spacing issue between cards</span>
-                                <div>
-                                    <div class="float-left d-flex">
-                                        <span th:insert="fragments/flags :: bug"></span>
-                                        <span th:insert="fragments/flags :: priority(${'HIGH_PRIORITY'})"></span>
-                                    </div>
-                                    <div class="float-right">
-                                        <span th:insert="fragments/flags :: story_points(${5})"></span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="column col-md-5ths p-1">
-                    <div class="bg-gray rounded fill-height">
-                        <div class="p-3">
-                            <span>In Progress</span>
-                        </div>
-                        <div draggable="true" class="card mb-2 box-shadow m-1 cursor-pointer">
-                            <div class="card-body">
-                                <span>Implementing the Jira-like frontend of the application</span>
-                                <div>
-                                    <div class="float-left d-flex">
-                                        <span th:insert="fragments/flags :: feature"></span>
-                                        <span th:insert="fragments/flags :: priority(${'HIGHEST_PRIORITY'})"></span>
-                                    </div>
-                                    <div class="float-right">
-                                        <span th:insert="fragments/flags :: story_points(${13})"></span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="column col-md-5ths p-1">
-                    <div class="bg-gray rounded fill-height">
-                        <div class="p-3">
-                            <span>In Review</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="column col-md-5ths p-1">
-                    <div class="bg-gray rounded fill-height">
-                        <div class="p-3">
-                            <span>In Test</span>
-                        </div>
-                        <div draggable="true" class="card mb-2 box-shadow m-1 cursor-pointer">
-                            <div class="card-body">
-                                <span>Write the initial API</span>
-                                <div>
-                                    <div class="float-left d-flex">
-                                        <span th:insert="fragments/flags :: feature"></span>
-                                        <span th:insert="fragments/flags :: priority(${'HIGH_PRIORITY'})"></span>
-                                    </div>
-                                    <div class="float-right">
-                                        <span th:insert="fragments/flags :: story_points(${3})"></span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div draggable="true" class="card mb-2 box-shadow m-1 cursor-pointer">
-                            <div class="card-body">
-                                <span>Enable default authentication in the platform</span>
-                                <div>
-                                    <div class="float-left d-flex">
-                                        <span th:insert="fragments/flags :: feature"></span>
-                                        <span th:insert="fragments/flags :: priority(${'LOWEST_PRIORITY'})"></span>
-                                    </div>
-                                    <div class="float-right">
-                                        <span th:insert="fragments/flags :: story_points(${2})"></span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="column col-md-5ths p-1">
-                    <div class="bg-gray rounded fill-height">
-                        <div class="p-3">
-                            <span>Closed</span>
-                        </div>
-                        <div draggable="true" class="card mb-2 box-shadow m-1 cursor-pointer">
-                            <div class="card-body">
-                                <span> Choose a title for the app</span>
-                                <div>
-                                    <div class="float-left d-flex">
-                                        <span th:insert="fragments/flags :: feature"></span>
-                                        <span th:insert="fragments/flags :: priority(${'LOW_PRIORITY'})"></span>
-                                    </div>
-                                    <div class="float-right">
-                                        <span th:insert="fragments/flags :: story_points(${8})"></span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div draggable="true" class="card mb-2 box-shadow m-1 cursor-pointer">
-                            <div class="card-body">
-                                <span>Fix the spacing issue between cards</span>
-                                <div>
-                                    <div class="float-left d-flex">
-                                        <span th:insert="fragments/flags :: bug"></span>
-                                        <span th:insert="fragments/flags :: priority(${'LOW_PRIORITY'})"></span>
-                                    </div>
-                                    <div class="float-right">
-                                        <span th:insert="fragments/flags :: story_points(${5})"></span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
         <footer th:include="fragments/footer"></footer>
     </body>
