--- a/src/main/resources/templates/projects/create.html
+++ b/src/main/resources/templates/projects/create.html
@@ -16,7 +16,7 @@
             </div>
             <div class="form-group">
                 <label for="description">A short description</label>
-                <input id="description" type="text" th:field="*{description}" class="form-control" placeholder="This is my awesome project.">
+                <textarea id="description" type="text" th:field="*{description}" class="form-control" placeholder="This is my awesome project." rows="3"></textarea>
                 <div th:if="${not #lists.isEmpty(descriptionError)}"
                     th:each="error, iter: ${descriptionError}" class="alert alert-danger mt-2">
                     <p th:text="${error}" class="auth-error-element">Error</p>
