--- a/src/main/resources/templates/fragments/task.html
+++ b/src/main/resources/templates/fragments/task.html
@@ -1,5 +1,5 @@
 <div th:fragment="taskCard (task)">
-    <div th:draggable="${not #strings.equals(task.getTaskState().name, 'BACKLOG')}" class="card mb-2 box-shadow m-1 cursor-pointer">
+    <div th:draggable="${not #strings.equals(task.getTaskState().name, 'BACKLOG')}" class="card mb-2 box-shadow m-1 cursor-pointer" ondrop="drop(event)" ondragover="allowDrop(event)" th:id=${task.getId()} ondragstart="taskDragStart(event)">
         <div class="card-body p-2">
             <div th:if="not ${#strings.equals(task.getTaskState().name(), 'BACKLOG')}">
                 <a th:text="${#strings.abbreviate(task.getName(), 50)}" data-toggle="modal" th:data-target="'#_' + ${task.getId()}"></a>
@@ -23,13 +23,16 @@
                 <div class="col-8 border-right">
                     <small th:text="${#strings.abbreviate(task.getDescription(), 30)}"></small>
                 </div>
-                <div class="col-2">
+                <div class="col-1">
                     <div class="float-right">
                         <span class="float-right" th:if="${#strings.equals(task.getTaskType(), 'FEATURE')}" th:insert="fragments/flags :: feature"></span>
                         <span class="float-right" th:if="${#strings.equals(task.getTaskType(), 'BUG')}" th:insert="fragments/flags :: bug"></span>
                         <span class="float-right" th:insert="fragments/flags :: priority(${task.getPriorityType()})"></span>
                         <span class="float-right" th:insert="fragments/flags :: story_points(${task.getStoryPoints()})"></span>
                     </div>
+                </div>
+                <div class="col-1 border-left">
+                    <a href="javascript:;" th:attr="onclick=|moveTaskById('${task.getId()}', 'TO_DO')|" class="mr-auto float-left p-1">Activate</a>
                 </div>
             </div>
         </div>
@@ -44,7 +47,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form id="form-create-task">
+                    <form th:id="'update-task-' + ${task.getId()}">
                         <input type="hidden" name="projectId" th:value="${task.getProject().getId()}">
                         <div class="form-group">
                             <label for="name">Name</label>
@@ -74,9 +77,9 @@
                     </form>
                 </div>
                 <div class="modal-footer">
+                    <a href="javascript:;" th:attr="onclick=|deleteTaskWithIdUpdateForm('${task.getId()}', 'update-task-${task.getId()}')|" class="mr-auto float-left btn btn-danger">Delete</a>
                     <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
-                    <a href="javascript:;" onclick="createTaskFromFormId('form-create-task')" class="btn btn-warning">Update</a>
-                    <a href="javascript:;" onclick="createTaskFromFormId('form-create-task')" class="btn btn-danger">Delete</a>
+                    <a href="javascript:;" th:attr="onclick=|updateTaskWithIdFromFormId('${task.getId()}', 'update-task-${task.getId()}')|" class="btn btn-warning">Update</a>
                 </div>
             </div>
         </div>
