--- a/src/main/resources/templates/fragments/task.html
+++ b/src/main/resources/templates/fragments/task.html
@@ -55,7 +55,7 @@
                         </div>
                         <div class="form-group">
                             <label for="description">Description</label>
-                            <textarea type="password" class="form-control" id="description" name="description" placeholder="Build the application from scratch." th:text="${task.getDescription()}"></textarea>
+                            <textarea type="password" class="form-control" id="description" name="description" placeholder="Build the application from scratch." th:text="${task.getDescription()}" rows=5></textarea>
                         </div>
                         <div class="form-group">
                             <label for="story-points">Story Points</label>
