--- a/src/main/resources/templates/projects/project.html
+++ b/src/main/resources/templates/projects/project.html
@@ -29,7 +29,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="description">Description</label>
-                                <textarea type="password" class="form-control" id="description" name="description" placeholder="Build the application from scratch."></textarea>
+                                <textarea type="password" class="form-control" id="description" name="description" placeholder="Build the application from scratch." rows=5></textarea>
                             </div>
                             <div class="form-group">
                                 <label for="story-points">Story Points</label>
